Fix font weight on submit button on iOS

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -56,6 +56,13 @@ select {
   }
 }
 
+.button[type=submit],
+.button[type=submit]:hover,
+.button[type=submit]:active,
+.button[type=submit]:focus {
+  font-weight: 400;
+}
+
 // Select element styles
 .select-wrapper {
   background: $purple;
